--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
+  <p>Hello World! I’m [username]. This is my website!</p>
+  
 <body>
 
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
